--- a/notebooks_en/exercises/100_pandas_exercises_en.ipynb
+++ b/notebooks_en/exercises/100_pandas_exercises_en.ipynb
@@ -710,7 +710,7 @@
     }
    ],
    "source": [
-    "df_store[df_store['tel_no'].str.match(r'^\\d{3}.*\\d{4}$')]"
+    "df_store[df_store['tel_no'].str.match(r'^\\d{3}.*\\d{4}$')] # Starts with 3 digits == ^\\d{3} and (.*) ends with 4 digits \\d{4}$"
    ]
   },
   {
