--- a/notebooks_en/exercises/100_pandas_exercises_en.ipynb
+++ b/notebooks_en/exercises/100_pandas_exercises_en.ipynb
@@ -19,8 +19,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-06T16:04:02.058662100Z",
-     "start_time": "2024-09-06T16:03:58.981501Z"
+     "end_time": "2024-09-07T04:41:40.715696Z",
+     "start_time": "2024-09-07T04:41:38.727154200Z"
     }
    },
    "outputs": [],
@@ -985,14 +985,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-09-06T16:04:01.729319400Z"
+     "end_time": "2024-09-07T04:48:41.898383200Z",
+     "start_time": "2024-09-07T04:48:41.837607300Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "         customer_id                   oldest_sale  \\\n0     CS001113000004 1970-01-01 00:00:00.020190308   \n5546  CS026415000175 1970-01-01 00:00:00.020170911   \n5545  CS026415000172 1970-01-01 00:00:00.020170206   \n5544  CS026415000157 1970-01-01 00:00:00.020170305   \n5543  CS026415000154 1970-01-01 00:00:00.020170227   \n5542  CS026415000150 1970-01-01 00:00:00.020170125   \n5541  CS026415000149 1970-01-01 00:00:00.020170122   \n5540  CS026415000145 1970-01-01 00:00:00.020170905   \n5539  CS026415000141 1970-01-01 00:00:00.020170201   \n5538  CS026415000123 1970-01-01 00:00:00.020170206   \n\n                  most_recent_sale  gap_days  \n0    1970-01-01 00:00:00.020190308         0  \n5546 1970-01-01 00:00:00.020191015         0  \n5545 1970-01-01 00:00:00.020190414         0  \n5544 1970-01-01 00:00:00.020180512         0  \n5543 1970-01-01 00:00:00.020190519         0  \n5542 1970-01-01 00:00:00.020191020         0  \n5541 1970-01-01 00:00:00.020190312         0  \n5540 1970-01-01 00:00:00.020180616         0  \n5539 1970-01-01 00:00:00.020190615         0  \n5538 1970-01-01 00:00:00.020190417         0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>customer_id</th>\n      <th>oldest_sale</th>\n      <th>most_recent_sale</th>\n      <th>gap_days</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CS001113000004</td>\n      <td>1970-01-01 00:00:00.020190308</td>\n      <td>1970-01-01 00:00:00.020190308</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5546</th>\n      <td>CS026415000175</td>\n      <td>1970-01-01 00:00:00.020170911</td>\n      <td>1970-01-01 00:00:00.020191015</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5545</th>\n      <td>CS026415000172</td>\n      <td>1970-01-01 00:00:00.020170206</td>\n      <td>1970-01-01 00:00:00.020190414</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5544</th>\n      <td>CS026415000157</td>\n      <td>1970-01-01 00:00:00.020170305</td>\n      <td>1970-01-01 00:00:00.020180512</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5543</th>\n      <td>CS026415000154</td>\n      <td>1970-01-01 00:00:00.020170227</td>\n      <td>1970-01-01 00:00:00.020190519</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5542</th>\n      <td>CS026415000150</td>\n      <td>1970-01-01 00:00:00.020170125</td>\n      <td>1970-01-01 00:00:00.020191020</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5541</th>\n      <td>CS026415000149</td>\n      <td>1970-01-01 00:00:00.020170122</td>\n      <td>1970-01-01 00:00:00.020190312</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5540</th>\n      <td>CS026415000145</td>\n      <td>1970-01-01 00:00:00.020170905</td>\n      <td>1970-01-01 00:00:00.020180616</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5539</th>\n      <td>CS026415000141</td>\n      <td>1970-01-01 00:00:00.020170201</td>\n      <td>1970-01-01 00:00:00.020190615</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5538</th>\n      <td>CS026415000123</td>\n      <td>1970-01-01 00:00:00.020170206</td>\n      <td>1970-01-01 00:00:00.020190417</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_receipt['sales_ymd'] = pd.to_datetime(df_receipt['sales_ymd'])\n",
+    "\n",
+    "# Group by customer ID\n",
+    "df_customer_sales = df_receipt.groupby('customer_id').agg(\n",
+    "    oldest_sale = ('sales_ymd', 'min'),\n",
+    "    most_recent_sale = ('sales_ymd', 'max')\n",
+    ").reset_index()\n",
+    "\n",
+    "# Calculate the gap\n",
+    "df_customer_sales['gap_days'] = (df_customer_sales['most_recent_sale'] - df_customer_sales['oldest_sale']).dt.days\n",
+    "\n",
+    "df_top_customers = df_customer_sales.sort_values(by='gap_days').head(10)\n",
+    "# Display the relevant columns\n",
+    "df_top_customers[['customer_id', 'oldest_sale', 'most_recent_sale', 'gap_days']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1004,14 +1030,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-09-06T16:04:01.731319700Z"
+     "end_time": "2024-09-07T04:53:53.576416100Z",
+     "start_time": "2024-09-07T04:53:53.544245700Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   store_cd  average_sales\n28   S13052     402.867470\n12   S13015     351.111960\n7    S13003     350.915519\n30   S14010     348.791262\n5    S13001     348.470386",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>store_cd</th>\n      <th>average_sales</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>28</th>\n      <td>S13052</td>\n      <td>402.867470</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>S13015</td>\n      <td>351.111960</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>S13003</td>\n      <td>350.915519</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>S14010</td>\n      <td>348.791262</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>S13001</td>\n      <td>348.470386</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by store_cd and calculate the average sales amount\n",
+    "df_store_avg =df_receipt.groupby('store_cd').agg(\n",
+    "    average_sales = ('amount', 'mean')\n",
+    ").reset_index()\n",
+    "\n",
+    "# Sort\n",
+    "df_top5_store = df_store_avg.sort_values(by='average_sales', ascending=False).head(5)\n",
+    "\n",
+    "df_top5_store[['store_cd', 'average_sales']]\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1023,14 +1070,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-09-06T16:04:01.732319700Z"
+     "end_time": "2024-09-07T04:54:19.976468500Z",
+     "start_time": "2024-09-07T04:54:19.873611300Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   store_cd  median_sales\n28   S13052         190.0\n30   S14010         188.0\n51   S14050         185.0\n44   S14040         180.0\n7    S13003         180.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>store_cd</th>\n      <th>median_sales</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>28</th>\n      <td>S13052</td>\n      <td>190.0</td>\n    </tr>\n    <tr>\n      <th>30</th>\n      <td>S14010</td>\n      <td>188.0</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>S14050</td>\n      <td>185.0</td>\n    </tr>\n    <tr>\n      <th>44</th>\n      <td>S14040</td>\n      <td>180.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>S13003</td>\n      <td>180.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by store_cd and calculate the average sales amount\n",
+    "df_store_med =df_receipt.groupby('store_cd').agg(\n",
+    "    median_sales = ('amount', 'median')\n",
+    ").reset_index()\n",
+    "\n",
+    "# Sort\n",
+    "df_top5_store = df_store_med.sort_values(by='median_sales', ascending=False).head(5)\n",
+    "\n",
+    "df_top5_store[['store_cd', 'median_sales']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1042,14 +1110,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-09-06T16:04:01.733319400Z"
+     "end_time": "2024-09-07T04:58:08.718355700Z",
+     "start_time": "2024-09-07T04:58:08.642737500Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      store_cd  product_cd  count\n43612   S14027  P060303001    152\n35369   S14012  P060303001    142\n44757   S14028  P060303001    140\n4977    S12030  P060303001    115\n21302   S13031  P060303001    115\n1446    S12013  P060303001    107\n30357   S13044  P060303001     96\n39994   S14024  P060303001     96\n3765    S12029  P060303001     92\n9564    S13004  P060303001     88",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>store_cd</th>\n      <th>product_cd</th>\n      <th>count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>43612</th>\n      <td>S14027</td>\n      <td>P060303001</td>\n      <td>152</td>\n    </tr>\n    <tr>\n      <th>35369</th>\n      <td>S14012</td>\n      <td>P060303001</td>\n      <td>142</td>\n    </tr>\n    <tr>\n      <th>44757</th>\n      <td>S14028</td>\n      <td>P060303001</td>\n      <td>140</td>\n    </tr>\n    <tr>\n      <th>4977</th>\n      <td>S12030</td>\n      <td>P060303001</td>\n      <td>115</td>\n    </tr>\n    <tr>\n      <th>21302</th>\n      <td>S13031</td>\n      <td>P060303001</td>\n      <td>115</td>\n    </tr>\n    <tr>\n      <th>1446</th>\n      <td>S12013</td>\n      <td>P060303001</td>\n      <td>107</td>\n    </tr>\n    <tr>\n      <th>30357</th>\n      <td>S13044</td>\n      <td>P060303001</td>\n      <td>96</td>\n    </tr>\n    <tr>\n      <th>39994</th>\n      <td>S14024</td>\n      <td>P060303001</td>\n      <td>96</td>\n    </tr>\n    <tr>\n      <th>3765</th>\n      <td>S12029</td>\n      <td>P060303001</td>\n      <td>92</td>\n    </tr>\n    <tr>\n      <th>9564</th>\n      <td>S13004</td>\n      <td>P060303001</td>\n      <td>88</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Group by store_cd and product_cd\n",
+    "df_product_count = df_receipt.groupby(['store_cd', 'product_cd']).size().reset_index(name='count')\n",
+    "\n",
+    "# For each store, find the most frequent product\n",
+    "df_most_frequent = df_product_count.loc[df_product_count.groupby('store_cd')['count'].idxmax()] # Select the row maximum count for each store_cd\n",
+    "\n",
+    "# Sort the result in ascending and get the top 10\n",
+    "df_top_products = df_most_frequent.sort_values(by='count', ascending=False).head(10)\n",
+    "\n",
+    "# Display \n",
+    "df_top_products[['store_cd', 'product_cd', 'count']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1061,14 +1152,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2024-09-06T16:04:01.734319800Z"
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   store_cd  sales_variance\n28   S13052   441863.252526\n31   S14011   306442.242432\n42   S14034   297068.392740\n5    S13001   295558.842618\n12   S13015   295427.197086",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>store_cd</th>\n      <th>sales_variance</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>28</th>\n      <td>S13052</td>\n      <td>441863.252526</td>\n    </tr>\n    <tr>\n      <th>31</th>\n      <td>S14011</td>\n      <td>306442.242432</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>S14034</td>\n      <td>297068.392740</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>S13001</td>\n      <td>295558.842618</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>S13015</td>\n      <td>295427.197086</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
-   "source": []
+   ],
+   "source": [
+    "df_sales_var = df_receipt.groupby('store_cd').agg(\n",
+    "    sales_variance = ('amount', 'var')\n",
+    ").reset_index()\n",
+    "\n",
+    "# Sort\n",
+    "df_sales_var = df_sales_var.sort_values(by='sales_variance', ascending=False).head(5)\n",
+    "\n",
+    "df_sales_var"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-07T05:02:04.783688100Z",
+     "start_time": "2024-09-07T05:02:04.750239200Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
